sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {

var ecart = getNombreValeurs
var x = true 

do {
	x = false
	if (ecart > 1 ) {
		ecart = (ecart.toDouble / 1.3).toInt
	}
	var i = 0
	while (i + ecart < getNombreValeurs) {
		if (plusPetit(i+1,i)) {
				echange(i,i+1)
				x = true
				}
		i=i+1		
	}
} while (ecart > 1 || x == true

}
}